application/java-vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-vault
  labels:
    app: java-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-vault
  template:
    metadata:
      labels:
        app: java-vault
    spec:
      containers:
        - name: java-vault
          image: "ghcr.io/anthonydurot/devfest-2021:recuperation-vault"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
