application/java-vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-vault
  namespace: java-vault
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: java-vault.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-vault
            port:
              number: 8080
